Fix header logo URL and z-index issue

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1150,7 +1150,7 @@ form label.error {
     left: 7%;
     top: 26px;
     /* display: none; */
-    /* z-index: 9999; */
+    z-index: 9999;
     padding: 0px 20px;
     margin: 0 auto;
 }
@@ -7471,6 +7471,8 @@ canvas {
     letter-spacing: 4px;
     border-radius: 20px;
     font-size: 20px;
+    line-height: 36px;
+    direction: ltr;
 }
 .certificateZoomIn i {
     vertical-align: middle;
